fix(styles): remove unnecessary centering of katex-display
It turns out that it was the problematic style fixed in
2c684aa9721dec1fc1676ccf6517a that caused katex-display
to be not centered. Now no extra centering is needed.

--- a/src/styles/math.scss
+++ b/src/styles/math.scss
@@ -4,8 +4,4 @@
 
 .math-display {
   @apply overflow-auto;
-
-  .katex-display > .katex > .katex-html {
-    @apply flex justify-center;
-  }
 }
